# Duki

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  mise.toml  pyproject.toml
backend/: __init__.py  config.py  constants.py  errors.py  main.py
backend/composition/: __init__.py  auth.py  calendar.py  duck_sessions.py  moods.py  scheduler.py  tasks.py
backend/models/: auth.py  calendar.py  debriefs.py  duck_sessions.py  moods.py  scheduler.py  task_events.py  tasks.py
backend/repositories/: auth.py  calendar.py  debriefs.py  duck_sessions.py  moods.py  task_events.py  tasks.py
backend/routers/: auth.py  calendar_events.py  calendar_free_blocks.py  duck_sessions.py  goals.py  health.py  moods.py  schedule_plans.py  tasks.py
backend/schemas/: __init__.py  auth.py  calendar.py  duck_sessions.py  goals.py  moods.py  scheduler.py  task_events.py  tasks.py
backend/services/: calendar_availability_service.py  calendar_query_service.py  calendar_sync_service.py  duck_session_confirmation_service.py  duck_session_query_service.py  duck_session_service.py  goal_service.py  identity_auth_service.py  identity_authorization_service.py  mood_computation_service.py  mood_service.py  scheduler_service.py  session_exchange_service.py  session_refresh_service.py  session_validation_service.py  task_calendar_service.py  task_completion_service.py  task_deduplication_service.py  task_goal_service.py  task_service.py  transcript_normalization_service.py
backend/tests/: __init__.py  test_auth.py  (+3 more)
frontend/: README.md  package-lock.json  package.json
(+80 files in other folders)
