[project]
name = "duki-backend"
version = "0.1.0"
description = "Mood-based productivity backend"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.1,<3",
    "ruff>=0.15,<1",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["backend"]

[tool.ruff.lint]
select = ["ASYNC", "B", "E4", "E7", "E9", "F", "I", "UP"]

[tool.mypy]
python_version = "3.14"
files = ["backend"]
strict = true
warn_unreachable = true
